# pico_hello_uart_hc06

./: CMakeLists.txt  README.md  hello_uart.c
